--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,20 +8,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swagatam</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Roboto Medium', sans-serif; /* Use Roboto font or any other preferred font */
       font-size: 16px;
       line-height: 1.6;
-      color: #000;
+      color: #000000; /* Default text color */
       margin: 0;
       padding: 0;
       width: 100%;
-      /* background-color: #ffdbac; */
+      /*background-image: url('images/bgg1.png');
+      background-size: contain; /* Set the width and height of the background image */
+      /*background-repeat: no-repeat;
+      background-position: center top;
+       /* Center the background image */
+      <!-- background-color: #ffdbac;-->
     }
-
+  /*.home {
+      max-width: 100%;
+      margin: 0 auto;
+      padding: 10px;
+    }*/
     .home {
       max-width: 100%;
       margin: 0 auto;
@@ -33,11 +45,10 @@
       list-style: none;
       padding: 0;
       margin: 0;
-      display: flex;
-      flex-wrap: wrap;
     }
 
     .navigation ul li {
+      display: inline;
       margin-right: 20px;
     }
 
@@ -48,25 +59,22 @@
     }
 
     .navigation li a:hover {
-      color: #ff6600;
+      color: #ff6600; /* Change color on hover */
     }
 
     .hero-section {
       width: 100%;
-      height: 100vh;
+      height: 100vh; /* Adjust height as needed */
       background-image: url('images/bgg1.png');
-      background-size: cover;
+      background-size: contain;
       background-repeat: no-repeat;
       background-position: center top;
       display: flex;
-      align-items: center;
-      justify-content: left;
-      color: white;
-      text-align: center;
-    }
-
-    .content {
-      padding: 0 5%;
+      align-items: center; /* Center content vertically */
+      justify-content: left; /* Center content horizontally */
+      color: white; /* Set default text color */
+      text-align: center; /* Center text */
+      /* margin-top: 100px; */
     }
 
     .hero-image {
@@ -79,7 +87,7 @@
     }
 
     .hero-text h2 {
-      font-size: 2.5em;
+      font-size: 2.5em; /* Larger font size for heading */
       margin-bottom: 10px;
       color: #FFFFFF;
     }
@@ -125,51 +133,80 @@
     }
 
     .post-link:hover {
-      color: #ff6600;
+      color: #ff6600; /* Change color on hover */
     }
 
-    @media (max-width: 768px) {
-      .hero-section {
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-      }
-
-      .content {
-        padding: 0 2%;
-      }
-
-      .hero-text h2 {
-        font-size: 1.8em;
-      }
-
-      .hero-text p {
-        font-size: 1em;
-      }
+    .content {
+            text-align: left;
     }
+
+    .svg-icon {
+      width: 16px;
+      height: 16px;
+    }
+
+
   </style>
 </head>
 <body>
 <div class="home">
-  <div class="hero-section" style="background-color: #ffcc99; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
-    <div class="content">
-      <h2 style="color: black; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
-      <p style="color: black; font-size: 14px; text-align: justify;">
+  <!--{%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}  </h1>
+  {%- endif -%}-->
+
+
+  <div class="hero-section" style="width: 100%; background-color: #ffcc99; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
+    <div class="content" style="padding-left: 40px;">
+<!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
+      <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
+
+      <p style="color: black; font-family: 'Montserrat', sans-serif; font-size: 14px">
         Embark on an exhilarating journey into the captivating realm <br>of Computing with our vibrant and engaging sessions spanning two days. <br>Our esteemed professors and brilliant students from IIT Ropar will <br>be your guides, illuminating your path through this enriching and <br>unforgettable experience.
       </p> 
+
       <p style="color: black;"><b>Dates: 22nd and 23rd July</b></p>
+
       <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
       <br>
+
       <p style="color: black;">
         Join Our WhatsApp Group here:
         <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>
       </p>
+      
     </div>
   </div>
   <br>
-  <div class="content">
-    {{ content }}
+  <div class="content" style="padding-left: 170px; padding-right: 170px ;">
+  {{ content }}
   </div>
+
+ <!-- {%- if site.posts.size > 0 -%}
+    <div class="recent-posts">	
+      <h1 class="post-list-heading">Recent Posts</h1>
+      <ul class="post-list">
+        {%- for post in site.posts limit: 1 -%}
+        <li>-->
+        <!--  {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          <span class="post-meta">{{ post.date | date: date_format }}</span>
+        
+            <a class="post-link" href="/aicamp/dashboard/">
+              <h6>
+              Matrix Mystics
+              </h6>
+            </a> -->
+          
+          {%- if site.show_excerpts -%}
+            {{ post.excerpt }}
+          {%- endif -%}
+        </li>
+        {%- endfor -%}
+      </ul>
+      <!-- <a href="" class="btn">View All Posts</a> -->
+    </div>
+  {%- endif -%}
+
+  
 </div>
 </body>
 </html>
