--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,3 @@
----
-layout: default
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,29 +5,19 @@ layout: default
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swagatam</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Roboto Medium', sans-serif; /* Use Roboto font or any other preferred font */
+      font-family: 'Montserrat', sans-serif;
       font-size: 16px;
       line-height: 1.6;
-      color: #000000; /* Default text color */
+      color: #000000;
       margin: 0;
       padding: 0;
       width: 100%;
-      /*background-image: url('images/bgg1.png');
-      background-size: contain; /* Set the width and height of the background image */
-      /*background-repeat: no-repeat;
-      background-position: center top;
-       /* Center the background image */
-      <!-- background-color: #ffdbac;-->
     }
-  /*.home {
-      max-width: 100%;
-      margin: 0 auto;
-      padding: 10px;
-    }*/
+
     .home {
       max-width: 100%;
       margin: 0 auto;
@@ -45,11 +32,14 @@ layout: default
       list-style: none;
       padding: 0;
       margin: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
     }
 
     .navigation ul li {
-      display: inline;
       margin-right: 20px;
+      margin-bottom: 10px;
     }
 
     .navigation ul li a {
@@ -59,43 +49,40 @@ layout: default
     }
 
     .navigation li a:hover {
-      color: #ff6600; /* Change color on hover */
+      color: #ff6600;
     }
 
     .hero-section {
       width: 100%;
-      height: 100vh; /* Adjust height as needed */
-      background-image: url('images/bgg1.png');
-      background-size: contain;
+      min-height: 100vh;
+      background-image: url('images/joc image.jpg');
+      background-size: cover;
       background-repeat: no-repeat;
-      background-position: center top;
+      background-position: right top;
       display: flex;
-      align-items: center; /* Center content vertically */
-      justify-content: left; /* Center content horizontally */
-      color: white; /* Set default text color */
-      text-align: center; /* Center text */
-      /* margin-top: 100px; */
+      align-items: center;
+      justify-content: flex-start;
+      padding: 20px;
     }
 
-    .hero-image {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .hero-text {
-      margin-top: 20px;
+    .hero-content {
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 600px;
     }
 
     .hero-text h2 {
-      font-size: 2.5em; /* Larger font size for heading */
-      margin-bottom: 10px;
-      color: #FFFFFF;
+      font-size: 23px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+      margin-bottom: 20px;
+      color: black;
     }
 
     .hero-text p {
-      font-size: 1.2em;
+      font-size: 14px;
       margin-bottom: 20px;
-      color: #FFFFFF;
+      color: black;
     }
 
     .btn {
@@ -106,10 +93,15 @@ layout: default
       text-decoration: none;
       border-radius: 5px;
       transition: background-color 0.3s;
+      margin-bottom: 10px;
     }
 
     .btn:hover {
       background-color: #008CBA;
+    }
+
+    .content {
+      padding: 20px;
     }
 
     .post-list-heading {
@@ -133,11 +125,7 @@ layout: default
     }
 
     .post-link:hover {
-      color: #ff6600; /* Change color on hover */
-    }
-
-    .content {
-            text-align: left;
+      color: #ff6600;
     }
 
     .svg-icon {
@@ -145,68 +133,82 @@ layout: default
       height: 16px;
     }
 
+    @media (max-width: 768px) {
+      .hero-section {
+        background-position: center;
+      }
 
+      .hero-content {
+        max-width: 100%;
+      }
+
+      .hero-text h2 {
+        font-size: 20px;
+      }
+
+      .hero-text p {
+        font-size: 12px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .btn {
+        padding: 8px 16px;
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
 <body>
-<div class="home">
-  <!--{%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}  </h1>
-  {%- endif -%}-->
-
-
-  <div class="hero-section" style="width: 100%; background-color: #ffcc99; background-image: url('images/joc image.jpg'); background-size: contain; background-repeat: no-repeat; background-position: right top;">
-    <div class="content" style="padding-left: 40px;">
-<!--       <h2 style="color: black;"><b> Joy Of Computing Online Workshop</b></h2> -->
-      <h2 style="color: black; font-family: 'Montserrat', sans-serif; font-size: 23px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);"><b>Joy Of Computing Online Workshop</b></h2>
-
-      <p style="color: black; font-family: 'Montserrat', sans-serif; font-size: 14px">
-        Embark on an exhilarating journey into the captivating realm <br>of Computing with our vibrant and engaging sessions spanning two days. <br>Our esteemed professors and brilliant students from IIT Ropar will <br>be your guides, illuminating your path through this enriching and <br>unforgettable experience.
-      </p> 
-
-      <p style="color: black;"><b>Dates: 22nd and 23rd July</b></p>
-
-      <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
-      <br>
-
-      <p style="color: black;">
-        Join Our WhatsApp Group here:
-        <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>
-      </p>
-      
-    </div>
-  </div>
-  <br>
-  <div class="content" style="padding-left: 10vw; padding-right: 10vw ;">
-  {{ content }}
-  </div>
-
- <!-- {%- if site.posts.size > 0 -%}
-    <div class="recent-posts">	
-      <h1 class="post-list-heading">Recent Posts</h1>
-      <ul class="post-list">
-        {%- for post in site.posts limit: 1 -%}
-        <li>-->
-        <!--  {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-          <span class="post-meta">{{ post.date | date: date_format }}</span>
-        
-            <a class="post-link" href="/aicamp/dashboard/">
-              <h6>
-              Matrix Mystics
-              </h6>
-            </a> -->
-          
-          {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
-          {%- endif -%}
-        </li>
-        {%- endfor -%}
+  <div class="home">
+    <nav class="navigation">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-      <!-- <a href="" class="btn">View All Posts</a> -->
-    </div>
-  {%- endif -%}
+    </nav>
 
-  
-</div>
+    <div class="hero-section">
+      <div class="hero-content">
+        <div class="hero-text">
+          <h2><b>Joy Of Computing Online Workshop</b></h2>
+          <p>
+            Embark on an exhilarating journey into the captivating realm of Computing with our vibrant and engaging sessions spanning two days. Our esteemed professors and brilliant students from IIT Ropar will be your guides, illuminating your path through this enriching and unforgettable experience.
+          </p>
+          <p><b>Dates: 22nd and 23rd July</b></p>
+          <a href="https://forms.gle/HP18PAvap6ifJ8EG8" class="btn">Register Now</a>
+          <p>
+            Join Our WhatsApp Group here:
+            <a href="https://chat.whatsapp.com/J4Na1mTOXqY3xCPWGv64sz" class="btn">Join Now</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="content">
+      {{ content }}
+    </div>
+
+    {% if site.posts.size > 0 %}
+      <div class="recent-posts">	
+        <h1 class="post-list-heading">Recent Posts</h1>
+        <ul class="post-list">
+          {% for post in site.posts limit: 1 %}
+            <li>
+              {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+              <span class="post-meta">{{ post.date | date: date_format }}</span>
+              <a class="post-link" href="{{ post.url | relative_url }}">
+                <h6>{{ post.title | escape }}</h6>
+              </a>
+              {% if site.show_excerpts %}
+                {{ post.excerpt }}
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endif %}
+  </div>
 </body>
 </html>
